--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - npm install
-      - npm build
+      - npm run build
 artifacts:
   files:
     - index.html
