added post_build, split out install

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,21 @@
+# uses aws/codebuild/nodejs:8.11.0
+#
 version: 0.1
 
 phases:
-  build:
+  
+  install:
     commands:
       - npm install
+  build:
+    commands:
       - npm run build
+  post_build:
+    commands:
+      - aws s3 cp --recursive --acl public-read ./build s3://acguru-sharebucket
+
+
+
 artifacts:
   files:
     - "**/*"
