--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@
 version: 0.1
 
 phases:
-  
+
   install:
     commands:
       - npm install
@@ -12,7 +12,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws s3 cp --recursive --acl public-read ./build s3://acguru-sharebucket
+      - aws s3 cp --recursive --acl public-read ./build s3://$WEB_BUCKET/
 
 
 
