--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,11 @@
 # uses aws/codebuild/nodejs:8.11.0
 #
-version: 0.1
+version: 0.2
+
+env:
+  variables:
+    WEB_BUCKET: cliffanalysis
+
 
 phases:
 
