--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ version: 0.2
 
 env:
   variables:
-    WEB_BUCKET: "cliffanalysis"
+    WEB_BUCKET1: "cliffanalysis.com"
 
 
 phases:
@@ -17,8 +17,9 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws s3 cp --recursive --acl public-read ./build s3://cliffanalysis/
-#      - aws s3 cp --recursive --acl public-read ./build s3://$WEB_BUCKET/
+      - aws s3 cp --recursive --acl public-read ./build s3://cliffanalysis.com/
+      - echo $WEB_BUCKET
+      - echo $WEB_BUCKET1
 
 
 
