--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - "aws s3 cp --recursive --acl public-read ./build s3://$WEB_BUCKET/"
+      - aws s3 sync ./build s3://$WEB_BUCKET/ --delete --acl public-read
 
 artifacts:
   files:
