set to have CFN update kick off each time

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
   install:
     commands:
       - npm install
+      - aws cloudformation update-stack --stack-name $STACK_NAME --template-body file://base-cfn.json
   build:
     commands:
       - npm run build
