--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
       # no stack update currently returns 255 status code
       #  updated to 1.16 awscli to resolve
       - id
+      - ps
       - apt-get update && apt install -y jq
       #- pip install --upgrade --user awscli
       - aws --version
@@ -39,7 +40,7 @@ phases:
               --change-set-name ci-test-if-changes | \
                   jq -r '.Status')
           echo $CHANGE_SET_STATUS
-          if [ "$CHANGE_SET_STATUS" == "CREATE_COMPLETE" ]
+          if [ "x$CHANGE_SET_STATUS" = "xCREATE_COMPLETE" ]
           then
             break
           fi
