--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.4",
-    "bootstrap": "^4.1.3",
+    "ajv": "^6.6.2",
+    "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "popper.js": "^1.14.6",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-icons": "^2.2.7",
-    "react-media": "^1.8.0",
+    "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
