update for cloudfront invalidation

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,8 @@ phases:
     commands:
       # no stack update currently returns 255 status code
       #  updated to 1.16 awscli to resolve
-      - id
-      - ps
+      #- id
+      #- ps
       - apt-get update && apt install -y jq
       #- pip install --upgrade --user awscli
       - aws --version
@@ -76,6 +76,9 @@ phases:
   post_build:
     commands:
       - aws s3 sync ./build s3://$WEB_BUCKET/ --delete --acl public-read
+      - aws s3 cp --acl public-read --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/service-worker.js s3://$WEB_BUCKET/
+      - aws s3 cp --acl public-read --cache-control="max-age=0, no-cache, no-store, must-revalidate" ./build/index.html s3://$WEB_BUCKET/
+      - aws cloudfront create-invalidation --distribution-id $CFN_DIST --paths /index.html /service-worker.js
       - SNS_TOPIC=$( aws cloudformation describe-stack-resource --stack-name $STACK_NAME --logical-resource-id SNSTopic | jq -r '.StackResourceDetail.PhysicalResourceId' )
       - aws sns publish --target-arn $SNS_TOPIC --message 'Environment Build completed'
 
