--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,53 +21,54 @@ phases:
       #- pip install --upgrade --user awscli
       - aws --version
       - echo $STACK_NAME
-      - |
-        aws cloudformation validate-template \
-            --template-body file://base-cfn.json
-      # 10/22/2018 this wasn't working very smoothly
-      #    for now just manually update the stack when it needs changing
-      # # this is to check if any changes first
-      - |
-        aws cloudformation create-change-set \
-            --stack-name $STACK_NAME \
-            --change-set-name ci-test-if-changes \
-            --template-body file://base-cfn.json \
-            --capabilities CAPABILITY_IAM \
-            --parameters ParameterKey=WebHostName,UsePreviousValue=true \
-                         ParameterKey=GitHubOAuthToken,UsePreviousValue=true \
-                         ParameterKey=GitHubBranch,UsePreviousValue=true
-      - |  # loop until the change set is created
-        while true
-        do
-          CHANGE_SET_STATUS=$(aws cloudformation describe-change-set \
-              --stack-name $STACK_NAME \
-              --change-set-name ci-test-if-changes | \
-                  jq -r '.Status')
-          echo $CHANGE_SET_STATUS
-          if [ "x$CHANGE_SET_STATUS" = "xCREATE_COMPLETE" ]
-          then
-            break
-          fi
-          sleep 1
-        done
-        CHANGE_SET=$(aws cloudformation describe-change-set \
-            --stack-name $STACK_NAME \
-            --change-set-name ci-test-if-changes | \
-                jq -r '.Changes[]')
-      - | # always run delete in seperate command
-        aws cloudformation delete-change-set \
-            --stack-name $STACK_NAME \
-            --change-set-name ci-test-if-changes
-      - echo $CHANGE_SET
-      - |  # if we are non-empty go ahead and run the update
-        if [ ! -z $CHANGE_SET ]
-        then
-          aws cloudformation update-stack \
-              --stack-name $STACK_NAME \
-              --template-body file://base-cfn.json \
-              --capabilities CAPABILITY_IAM \
-              --parameters ParameterKey=WebHostName,UsePreviousValue=true
-        fi
+      # 2019-12-21 going to replace all of this with split out of pipeline and resource stack
+      # - |
+      #   aws cloudformation validate-template \
+      #       --template-body file://base-cfn.json
+      # # 10/22/2018 this wasn't working very smoothly
+      # #    for now just manually update the stack when it needs changing
+      # # # this is to check if any changes first
+      # - |
+      #   aws cloudformation create-change-set \
+      #       --stack-name $STACK_NAME \
+      #       --change-set-name ci-test-if-changes \
+      #       --template-body file://base-cfn.json \
+      #       --capabilities CAPABILITY_IAM \
+      #       --parameters ParameterKey=WebHostName,UsePreviousValue=true \
+      #                    ParameterKey=GitHubOAuthToken,UsePreviousValue=true \
+      #                    ParameterKey=GitHubBranch,UsePreviousValue=true
+      # - |  # loop until the change set is created
+      #   while true
+      #   do
+      #     CHANGE_SET_STATUS=$(aws cloudformation describe-change-set \
+      #         --stack-name $STACK_NAME \
+      #         --change-set-name ci-test-if-changes | \
+      #             jq -r '.Status')
+      #     echo $CHANGE_SET_STATUS
+      #     if [ "x$CHANGE_SET_STATUS" = "xCREATE_COMPLETE" ]
+      #     then
+      #       break
+      #     fi
+      #     sleep 1
+      #   done
+      #   CHANGE_SET=$(aws cloudformation describe-change-set \
+      #       --stack-name $STACK_NAME \
+      #       --change-set-name ci-test-if-changes | \
+      #           jq -r '.Changes[]')
+      # - | # always run delete in seperate command
+      #   aws cloudformation delete-change-set \
+      #       --stack-name $STACK_NAME \
+      #       --change-set-name ci-test-if-changes
+      # - echo $CHANGE_SET
+      # - |  # if we are non-empty go ahead and run the update
+      #   if [ ! -z $CHANGE_SET ]
+      #   then
+      #     aws cloudformation update-stack \
+      #         --stack-name $STACK_NAME \
+      #         --template-body file://base-cfn.json \
+      #         --capabilities CAPABILITY_IAM \
+      #         --parameters ParameterKey=WebHostName,UsePreviousValue=true
+      #   fi
       - npm install
   #pre_build:
   build:
