--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -11,8 +11,8 @@ on:
     branches:
       - master
       - release/dev
-    push:
-      - mcliff1/feature/**
+  push:
+    - feature/*
 
 jobs:
   deploy:
