--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -19,11 +19,17 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: My script
-        run: |
-          set
-        shell: bash
+
+      - name: Configuration for Test
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
+
+      - run: |
+          aws sts get-caller-identity
