--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -30,11 +30,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+          aws-region: us-east-1
           role-to-assume: ${{ secrets.TEST_AWS_ROLE_ARN }}
           role-duration-seconds: 1800
 
       - name: get sts info
         run: |
           aws sts get-caller-identity
+          BUCKET=$(aws ssm get-parameter --name /tmp/app/cliffconsulting/bucket --query 'Parameter.Value' --output text)
+          echo $BUCKET
+          npm run build
+          aws s3 sync ./build s3:/${BUCKET}/ --delete --acl public-read
+
         if: github.ref == 'refs/heads/feature/init-pipeline'
