moved into single hook

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,12 +3,12 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches:
-      - master
-      - feature/*
-      - release/*
+# on:
+#   push:
+#     branches:
+#       - master
+#       - feature/*
+#       - release/*
 
 jobs:
   build:
