update to only run build and deploy step on release/dev branch

--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -62,4 +62,4 @@ jobs:
           npm run build
           aws s3 sync ./build s3://${BUCKET}/ --delete
 
-        if: github.ref == 'refs/heads/feature/init-pipeline'
+        if: github.ref == 'refs/heads/release/dev'
