--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -47,7 +47,7 @@ jobs:
       # https://github.com/marketplace/actions/configure-aws-credentials-action-for-github-actions
       - name: Configuration for Test
         uses: aws-actions/configure-aws-credentials@v1
-        if: github.ref == 'refs/heads/release/dev'
+        if: ${{ github.ref == 'refs/heads/release/dev' }}
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
