--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -16,6 +16,26 @@ name: AWS Publish
 on: [push]
 
 jobs:
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -27,12 +47,31 @@ jobs:
       # https://github.com/marketplace/actions/configure-aws-credentials-action-for-github-actions
       - name: Configuration for Test
         uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ github.ref == 'refs/heads/release/dev' }}
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+          aws-region: us-east-1
+          role-to-assume: ${{ secrets.TEST_AWS_ROLE_ARN }}
+          role-duration-seconds: 1800
 
-      - name: get sts info
+      - name: Configuration for Production
+        uses: aws-actions/configure-aws-credentials@v1
+        if: ${{ github.ref == 'refs/heads/master' }}
+        with:
+          aws-access-key-id: ${{ secrets.PROD_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          role-to-assume: ${{ secrets.PROD_AWS_ROLE_ARN }}
+          role-duration-seconds: 1800
+
+
+      - name: Build And Deploy
         run: |
-          aws sts get-caller-identity
-        if: github.reg == 'refs/heads/feature/trunk-20210321'
+          BUCKET=$(aws ssm get-parameter --name /tmp/app/cliffconsulting/bucket --query 'Parameter.Value' --output text)
+          echo $BUCKET
+          npm install
+          npm run build
+          aws s3 sync ./build s3://${BUCKET}/ --delete
+
+        if: ${{ github.ref == 'refs/heads/release/dev' || github.ref == 'refs/heads/master' }}
