--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "myreact",
-  "version": "0.1.0",
+  "name": "cliffconsulting",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "ajv": "^6.10.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^2.2.7",
     "react-media": "^1.9.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
