--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-media": "^1.9.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^4.0.3",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "ejs": ">=3.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
