--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
