--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
   "name": "cliffconsulting",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.10.2",
     "bootstrap": "^4.3.1",
-    "ejs": ">=3.1.7",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-icons": "^4.4.0",
-    "react-media": "^1.9.2",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^2.1.3",
-    "reactstrap": "^6.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-media": "^1.10.0",
+    "react-router-dom": "^6.4.3",
+    "reactstrap": "^9.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "overrides": {
-    "postcss": "^8.1.0"
   },
   "browserslist": [
     ">0.2%",
@@ -30,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "typescript": "^3.5.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-scripts": "^5.0.1"
   }
 }
