--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "postcss": ">=8.4.31"
   }
 }
