--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "cliffconsulting",
-  "version": "0.4.0",
+  "version": "0.5.0",
+  "description": "Cliff Consulting website",
+  "main": "index.js",
   "private": true,
+  "keywords": [],
+  "author": "Cliff",
+  "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.21.1",
@@ -14,15 +19,21 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-scripts": "^5.0.1",
