--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.21.1",
@@ -37,6 +37,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-scripts": "^5.0.1",
-    "postcss": ">=8.4.31"
+    "postcss": "^8.4.31"
   }
 }
