--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "your-project-name",
+  "name": "cliffconsulting",
   "version": "1.0.0",
-  "description": "Your project description",
+  "description": "Cliff Consulting Website",
   "main": "index.js",
   "private": true,
   "keywords": [],
-  "author": "Your Name",
+  "author": "Matt Cliff",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.3.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.21.1",
     "reactstrap": "^9.2.1"
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.14.0",
-    "eslint": "^9.14.0",
+    "@typescript-eslint/utils": "^5.62.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.32.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.31",
-    "prettier": "^2.7.1",
     "react-scripts": "^5.0.1"
   }
 }
