--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,20 +25,24 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: '14'
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
 
     - name: Run ESLint
-      run: npx eslint . -f sarif -o eslint-results.sarif
-
-    - name: Upload ESLint results
-      uses: github/codeql-action/upload-sarif@v1
+      #run: npx eslint . -f sarif -o eslint-results.sarif
+      #run: npx eslint .ts.sarif
+      uses: eslint/github-action@v0
       with:
-        sarif_file: eslint-results.sarif
+        githubToken: ${{ secrets.GITHUB_TOKEN }}
+
+    #- name: Upload ESLint results
+    #  uses: github/codeql-action/upload-sarif@v1
+    #  with:
+    #    sarif_file: eslint-results.sarif
