--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "postcss": "^8.4.31",
     "react-scripts": "^5.0.1"
