--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -5,15 +5,15 @@
 #
 # ref: https://github.com/mcliff1/cliffconsulting/new/master?filename=.github%2Fworkflows%2Faws.yml&workflow_template=aws
 name: AWS Publish
-#
-# on:
-#   pull_request:
-#     branches:
-#       - master
-#       - release/dev
-#   push:
-#     - feature/*
-on: [push]
+
+on:
+  pull_request:
+    branches:
+      - master
+      - release/dev
+  #push:
+  #  - feature/*
+#on: [push]
 
 jobs:
 
