--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -11,8 +11,10 @@ on:
     branches:
       - master
       - release/dev
-  #push:
-  #  - feature/*
+  push:
+    branches:
+      - master
+      - release/dev
 #on: [push]
 
 jobs:
