--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "cliffconsulting",
-  "version": "0.5.0",
-  "description": "Cliff Consulting website",
+  "version": "1.0.0",
+  "description": "Cliff Consulting Website",
   "main": "index.js",
   "private": true,
   "keywords": [],
-  "author": "Cliff",
-  "license": "ISC",
+  "author": "Matt Cliff",
+  "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.3.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.21.1",
     "reactstrap": "^9.2.1"
@@ -36,7 +36,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react-scripts": "^5.0.1",
-    "postcss": "^8.4.31"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.31",
+    "react-scripts": "^5.0.1"
   }
 }
