--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-media": "^1.10.0",
-    "react-router-dom": "^6.21.1",
-    "reactstrap": "^9.2.1"
+    "react-router-dom": "^6.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
