--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cliffconsulting",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Cliff Consulting Website",
   "main": "index.js",
   "private": true,
@@ -8,8 +8,9 @@
   "author": "Matt Cliff",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-media": "^1.10.0",
