--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "react-router-dom": "^6.21.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -40,6 +39,8 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "postcss": "^8.4.31",
-    "react-scripts": "^5.0.1"
+    "vite": "^5.2.10",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.8.3"
   }
 }
