--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cliffconsulting",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Cliff Consulting Website",
   "main": "index.js",
   "private": true,
@@ -17,11 +17,9 @@
     "react-router-dom": "^6.21.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "coverage": "react-scripts test --coverage --watchAll=false",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -40,13 +38,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "postcss": "^8.4.31",
-    "react-scripts": "^5.0.1"
-  }
-  ,
+    "vite": "^7.1.2"
+  },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
