--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -78,7 +78,7 @@ jobs:
           echo $BUCKET
           npm install
           npm run build
-          aws s3 sync ./build s3://${BUCKET}/ --delete
+          aws s3 sync ./dist s3://${BUCKET}/ --delete
           STACK_NAME=${ACCOUNT_NAME}-cliffconsulting
           DISTRIBUTION=$(aws cloudformation --region us-east-1 describe-stacks --stack-name ${STACK_NAME} --query 'Stacks[0].Outputs[?OutputKey==`distributionid`].OutputValue' --output text)
           aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION} --paths "/*"
